feat: 지도 매물 목록 API 응답 필드 동기화 및 정렬 옵션 추가